# note.rs

./: README.md  icon.xcf  index.html  main.js  package-lock.json  package.json  style.css
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yaml  clippy.yaml  test.yaml  vulnerability-scan.yaml
frontend/: accelerators.js  editor.js  errordialog.js  fakenoteprovider.js  info.js  main.js  mdrenderer.js  note.js  notelist.js  noteprovider.js  notimplementeddialog.js  removedialog.js  settings.js  settingsprovider.js  slider.js  style.css  taglist.js  taurinoteprovider.js  taurisettingsprovider.js  titlebar.js
frontend/license/: backend.json  frontend.json  mit.txt
snap/: snapcraft.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: config.rs  localurl.rs  main.rs  note.rs  noteerror.rs
