[package]
name = "note-rs"
version = "0.1.0"
description = "A Note taking app"
authors = ["Falk Werner (https://github.com/falk-werner)", "fersaru (https://github.com/fersaru)"]
license = "MPL-2.0"
repository = "https://github.com/falk-werner/note.rs"
default-run = "note-rs"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
serde_yaml = "0.9.34"
home = "0.5.9"
opener = "0.7.2"
urlencoding = "2.1.3"
regex = "1.11.0"
uuid = { version = "1.10.0", features = [ "v4" ] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[dev-dependencies]
tempfile = "3.13.0"
